tests/NormalTests/paczka1/small_fuzzy/93612266.err
Error in line 2: dQ6 S26 21,5
Error in line 7: LJNMjI A399 20,5
Error in line 4: Tez2nPl9B1 S562 36,0
